hphp/hack/test/typecheck/dynamic/mixed_isnt_dynamic/match_param.php.exp
File "match_param.php", line 14, characters 19-20:
The method `do` has the wrong type (Typing[4341])
File "match_param.php", line 14, characters 22-28:
Expected `dynamic`
File "match_param.php", line 13, characters 33-37:
But got `mixed`
File "match_param.php", line 4, characters 22-24:
  via this generic `Tin`
